--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,22 @@
 @import '~bootstrap/scss/bootstrap';
+
+$background-color: #dee2e6;
+$text-color: #4a4a4a;
+$main-text: 'Pacifico';
+
+* {
+  color: $text-color;
+  font-family: $main-text, sans-serif;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.unauthenticated {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+
+body {
+  background-color: $background-color;
+}
