Add ui for index and create response
Character information is now being displayed on the screen whenever
index or create is sent to the api. Began working on delete function.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -35,6 +35,17 @@ $main-text: 'Pacifico';
   font-family: $main-text, sans-serif;
 }
 
+.characters-display {
+  h5 {
+    margin-top: 5px;
+  }
+
+  p {
+    margin-bottom: 5px;
+    text-align: left;
+  }
+}
+
 p {
   text-align: center;
 }
